--- a/joe.html
+++ b/joe.html
@@ -311,7 +311,7 @@ $(document).ready(function () {
 
 <p><br></p>
 <ol style="list-style-type: decimal">
-<li><p><strong>Reseach Technician III</strong> - Cornell Biological Field Station, Bridgeport, NY</p></li>
+<li><p><strong>Research Technician III</strong> - Cornell Biological Field Station, Bridgeport, NY</p></li>
 <li><p><strong>Master’s of Science Candidate</strong> - Cornell University, Department of Natural Resources, Ithaca, NY</p></li>
 <li><p><strong>Research Interests</strong> -</p></li>
 </ol>
